<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".DetailedActivity">

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            tools:text="Title"
            app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_header_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/user_rating_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:ignore="RtlCompat" />

        <RatingBar
            android:id="@+id/rbv_user_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:numStars="10"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_rating"
            tools:ignore="MissingConstraints,RtlCompat" />

        <TextView
            android:id="@+id/tv_header_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/release_date_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/rbv_user_rating"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            tools:text="10/10/2010"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_date"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_header_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/synopsis_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_synopsis"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_synopsis"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_header_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/trailers_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_synopsis"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_trailers"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_trailers"
            tools:ignore="RtlCompat" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailers"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingStart="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailers"
            tools:ignore="RtlCompat">
        </android.support.v7.widget.RecyclerView>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorLine"
            app:layout_constraintTop_toBottomOf="@+id/rv_trailers"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_header_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/reviews_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/rv_trailers"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_reviews"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_reviews"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/iv_favButton"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:src="@drawable/fav_off"
            app:layout_constraintBottom_toTopOf="@+id/tv_reviews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlCompat,RtlSymmetry" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>